--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <div class="column is-4 is-offset-4">
-                    <h3 class="title has-text-black">Login</h3>
+                    <h3 class="title has-text-black">PersonaPage</h3>
                     <hr class="login-hr">
-                    <p class="subtitle has-text-black">Please login to proceed.</p>
+                    <p class="subtitle has-text-black">Login to continue.</p>
                     <div class="box">
                         <figure class="avatar">
-                            <img src="https://placehold.it/128x128">
+                            <img src="image/logopweb">
                         </figure>
                         <form>
                             <div class="field">
